--- a/index.html
+++ b/index.html
@@ -1,80 +1,21 @@
 <head>
-  <style>
-    * {
-      box-sizing: border-box;
-    }
-  </style>
+  <link rel="stylesheet" href="main.css" />
 </head>
 <body>
-  <div style="position: relative; display: inline-block">
-    <div
-      style="
-        position: absolute;
-        display: flex;
-        width: 100%;
-        align-items: center;
-        padding: 20px;
-      "
-    >
-      <!-- Player Health -->
-      <div style="position: relative; height: 30px; width: 100%; display: flex; justify-content: flex-end;">
-        <div style="background-color: yellow; height: 30px; width: 100%;"></div>
-        <div 
-            id="playerHealth" 
-            style="
-                position: absolute; 
-                background: blue; 
-                top: 0; 
-                bottom: 0; 
-                right:0; 
-                width: 100%;
-            ">
-        </div>
-    </div>
-      <!-- Timer -->
-      <div
-        id="timer"
-        style="
-          background-color: red;
-          width: 100px;
-          height: 100px;
-          flex-shrink: 0;
-          display: flex;
-          align-items: center;
-          justify-content: center;
-        "
-      >10</div>
-      <!-- Enemy Health -->
-      <div style="position: relative; height: 30px; width: 100%"">
-        <div style="background-color: yellow; height: 30px;"></div>
-        <div 
-            id="enemyHealth" 
-            style="
-                position: absolute; 
-                background: blue; 
-                top: 0; 
-                bottom: 0; 
-                right:0; 
-                left: 0;">
-        </div>
+  <div id="canvasContainer">
+    <div id="topBar">
+      <div class="healthBarContainer leftBar">
+        <div class="underBar w-100"></div>
+        <div id="playerHealth" class="healthBar w-100"></div>
+      </div>
+      <div id="timer">10</div>
+      <div " class="healthBarContainer">
+        <div class="underBar"></div>
+        <div id="enemyHealth" class="healthBar"></div>
       </div>
     </div>
-    <div
-      id="displayText"
-      style="
-        position: absolute; 
-        color: white; 
-        align-items: center; 
-        justify-content: center;
-        top: 0;
-        right: 0;
-        left: 0;
-        bottom: 0;
-        display: none;
-      ">Tie
-    </div>
+    <div id="middleText">Tie</div>
     <canvas></canvas>
   </div>
-
   <script src="index.js"></script>
 </body>
